--- a/educacion.html
+++ b/educacion.html
@@ -28,74 +28,79 @@
     </header>
   </head>
   <body>
-    <h1>Educacion</h1>
-    <h2>Estudios</h2>
-    <table id="tablaEstudios" border="1" cellpadding="10">
-      <caption>Tabla Nº1: Educacion del postulante</caption>
-      <tr>
-        <th>Año</th>
-        <th>Instituto</th>
-        <th>Lugar</th>
-        <th>Culmino</th>
-      </tr>
-      <tr>
-        <td>2014</td>
-        <td>Universidad Central</td>
-        <td>Bogota DC</td>
-        <td>No</td>
-      </tr>
-      <tr>
-        <td>2011</td>
-        <td>Instituto Academico Bethel</td>
-        <td>Bogota DC</td>
-        <td>Si</td>
-      </tr>
-      <tr>
-        <td>2017</td>
-        <td>Next U</td>
-        <td>Bogota DC</td>
-        <td>No</td>
-      </tr>
-    </table>
-    <h2>Agregar estudios</h2>
-
-    <form id="formulario" name="formulario">
-      <br>Año<select name="ano" id="ano">
-         <option value="2000">2000</option>
-         <option value="2001">2001</option>
-         <option value="2002">2002</option>
-         <option value="2003">2003</option>
-         <option value="2004">2004</option>
-         <option value="2005">2005</option>
-         <option value="2006">2006</option>
-         <option value="2007">2007</option>
-         <option value="2008">2008</option>
-         <option value="2009">2009</option>
-         <option value="2010">2010</option>
-         <option value="2011">2011</option>
-         <option value="2012">2012</option>
-         <option value="2013">2013</option>
-         <option value="2014">2014</option>
-         <option value="2015">2015</option>
-         <option value="2016">2016</option>
-         <option value="2017">2017</option>
-      </select>
-      <br> Instituto: <input id="instituto" type="text" name="instituto" value=" ">
-      <br> Lugar: <input id="lugar" type="text" name="lugar" value=" ">
-      <br> ¿Culmino?
-      <input id="culmino" type="checkbox" name="culmino" value="Si"> Si
-      <input id="culmino" type="checkbox" name="culmino" value="No"> No<br>
-      <br><br>
-      <input type="submit" value="Enviar">
-    </form>
-
+    <section id="tabla">
+      <h1>Educacion</h1>
+      <div id="estudios" class="contenedor">
+        <h2>Estudios</h2>
+        <table id="tablaEstudios" border="1" cellpadding="10">
+          <caption>Tabla Nº1: Educacion del postulante</caption>
+          <tr>
+            <th>Año</th>
+            <th>Instituto</th>
+            <th>Lugar</th>
+            <th>Culmino</th>
+          </tr>
+          <tr>
+            <td>2014</td>
+            <td>Universidad Central</td>
+            <td>Bogota DC</td>
+            <td>No</td>
+          </tr>
+          <tr>
+            <td>2011</td>
+            <td>Instituto Academico Bethel</td>
+            <td>Bogota DC</td>
+            <td>Si</td>
+          </tr>
+          <tr>
+            <td>2017</td>
+            <td>Next U</td>
+            <td>Bogota DC</td>
+            <td>No</td>
+          </tr>
+        </table>
+      </div>
+    </section>
+    <section id="formulario">
+      <div class="contenedor">
+          <h2>Agregar estudios</h2>
+          <form id="formulario" name="formulario">
+            <br>Año<select name="ano" id="ano">
+               <option value="2000">2000</option>
+               <option value="2001">2001</option>
+               <option value="2002">2002</option>
+               <option value="2003">2003</option>
+               <option value="2004">2004</option>
+               <option value="2005">2005</option>
+               <option value="2006">2006</option>
+               <option value="2007">2007</option>
+               <option value="2008">2008</option>
+               <option value="2009">2009</option>
+               <option value="2010">2010</option>
+               <option value="2011">2011</option>
+               <option value="2012">2012</option>
+               <option value="2013">2013</option>
+               <option value="2014">2014</option>
+               <option value="2015">2015</option>
+               <option value="2016">2016</option>
+               <option value="2017">2017</option>
+            </select>
+            <br> Instituto: <input id="instituto" type="text" name="instituto" value=" ">
+            <br> Lugar: <input id="lugar" type="text" name="lugar" value=" ">
+            <br> ¿Culmino?
+            <input id="culmino" type="checkbox" name="culmino" value="Si"> Si
+            <input id="culmino" type="checkbox" name="culmino" value="No"> No<br>
+            <br><br>
+            <input type="submit" value="Enviar">
+          </form>
+      </div>
+    </section>
+    <footer>
+      <h3>
+        Correo Electronico: yuli.andre_amaya@hotmail.com <br>
+        Telefono: 321  284 4849 <br>
+        Facebook: https://www.facebook.com/yuliana.amayav
+      </h3>
+    </footer>
   </body>
-
-  <footer>
-    <h3>
-      Correo Electronico: yuli.andre_amaya@hotmail.com <br>
-      Telefono: 321  284 4849 <br>
-      Facebook: https://www.facebook.com/yuliana.amayav
-    </h3>
-  </footer>
 </html>
