--- a/experiencia.html
+++ b/experiencia.html
@@ -28,26 +28,32 @@
   </head>
   <body>
     <h2>Experiencia</h2>
-    <h3>Habilidades e intereses profesionales</h3>
-    <video controls poster="C:\Users\yuliana\Documents\Proyecto HTML5\Media\tempExperiencia.png" 
-	width="350px" height="288px">
-      <source src="C:\Users\yuliana\Documents\Proyecto HTML5\Media\videoExperiencia.mp4" type="video/mp4">
-      <source src="C:\Users\yuliana\Documents\Proyecto HTML5\Media\videoExperiencia.webm" type="video/webm">
-      <source src="C:\Users\yuliana\Documents\Proyecto HTML5\Media\videoExperiencia.ogv" type="video/ogv">
-      Formato de video no permitido
-    </video>
-    <h3>Hobbies y actividades recreacionales en mi tiempo libre</h3>
-    <audio controls preload="auto">
-		<source src="C:\Users\yuliana\Documents\Proyecto HTML5\Media\audioExperiencia.mp3" type="audio/mp3">
-		<source src="C:\Users\yuliana\Documents\Proyecto HTML5\Media\audioExperiencia.m4a" type="audio/m4a">
-	</audio>
-  </body>
-
-  <footer>
+    <section id="video">
+      <div class="contenedor">
+        <h3>Habilidades e intereses profesionales</h3>
+        <video controls poster="../Media/tempExperiencia.png" width="350px" height="288px">
+          <source src="../Media/videoExperiencia.mp4" type="video/mp4">
+          <source src="../Media/videoExperiencia.webm" type="video/webm">
+          <source src="../Media/videoExperiencia.ogv" type="video/ogv">
+          Formato de video no permitido
+        </video>
+      </div>
+    </section>
+    <section id="audio">
+      <div class="contenedor">
+        <h3>Hobbies y actividades recreacionales en mi tiempo libre</h3>
+        <audio controls preload="auto">
+    		<source src="../Media/audioExperiencia.mp3" type="audio/mp3">
+    		<source src="../Media/audioExperiencia.m4a" type="audio/m4a">
+    	</audio>
+      </div>
+    </section>
+    <footer>
     <h3>
       Correo Electronico: yuli.andre_amaya@hotmail.com <br>
       Telefono: 321  284 4849 <br>
       Facebook: https://www.facebook.com/yuliana.amayav
     </h3>
-  </footer>
+    </footer>
+  </body>
 </html>
