--- a/index.html
+++ b/index.html
@@ -27,26 +27,29 @@
     </header>
   </head>
   <body>
-    <h2>Informacion personal</h2>
-    <h3>Foto de perfil</h3>
-    <img src="C:\Users\yuliana\Documents\Proyecto HTML5\Media\fotoHDV.png"
-	width="134px" height="191px">
-    <h3>Perfil</h3>
-    <p>
-    Soy una persona comprometida con mi trabajo, tengo ideas innovadoras, me gustan los desafíos y nuevos proyectos, que la
-    empresa donde pretendo trabajar, me pudiera proponer; me gusta trabajar en coordinación con las diferentes jefaturas,
-    no tengo problemas para trabajar bajo presión, me gusta enfrentar los obstáculos que se presentan y mi misión en todo
-    empleo es llegar a cumplir los objetivos de la empresa y de mi equipo de trabajo.</p>
-    <ul title="Idiomas">
-      <li type="circle">Español nativo</li>
-      <li type="circle">Ingles A2</li>
-    </ul>
+    <section id="perfil">
+      <div class="contenedor">
+        <h2>Informacion personal</h2>
+        <h3>Foto de perfil</h3>
+        <img src="../Media/fotoHDV.png" width="134px" height="191px">
+        <h3>Perfil</h3>
+        <p>
+        Soy una persona comprometida con mi trabajo, tengo ideas innovadoras, me gustan los desafíos y nuevos proyectos, que la
+        empresa donde pretendo trabajar, me pudiera proponer; me gusta trabajar en coordinación con las diferentes jefaturas,
+        no tengo problemas para trabajar bajo presión, me gusta enfrentar los obstáculos que se presentan y mi misión en todo
+        empleo es llegar a cumplir los objetivos de la empresa y de mi equipo de trabajo.</p>
+        <ul title="Idiomas">
+          <li type="circle">Español nativo</li>
+          <li type="circle">Ingles A2</li>
+        </ul>
+      </div>
+    </section>
+    <footer>
+      <h3>
+        Correo Electronico: yuli.andre_amaya@hotmail.com <br>
+        Telefono: 321  284 4849 <br>
+        Facebook: https://www.facebook.com/yuliana.amayav
+      </h3>
+    </footer>
   </body>
-  <footer>
-    <h3>
-      Correo Electronico: yuli.andre_amaya@hotmail.com <br>
-      Telefono: 321  284 4849 <br>
-      Facebook: https://www.facebook.com/yuliana.amayav
-    </h3>
-  </footer>
 </html>
